3-ProgrammingLanguage/parser.output
State 8 conflicts: 4 shift/reduce
State 9 conflicts: 4 shift/reduce
State 17 conflicts: 1 shift/reduce
State 18 conflicts: 1 shift/reduce
State 19 conflicts: 1 shift/reduce
State 20 conflicts: 4 shift/reduce
State 21 conflicts: 1 shift/reduce
State 22 conflicts: 13 reduce/reduce
State 23 conflicts: 13 reduce/reduce
State 36 conflicts: 13 reduce/reduce
State 40 conflicts: 1 shift/reduce
State 71 conflicts: 13 reduce/reduce
State 87 conflicts: 13 reduce/reduce
State 88 conflicts: 13 reduce/reduce
State 89 conflicts: 13 reduce/reduce
State 96 conflicts: 1 shift/reduce
State 176 conflicts: 1 shift/reduce
State 358 conflicts: 1 shift/reduce


Grammar

    0 $accept: entrada $end

    1 entrada: ε
    2        | entrada linea

    3 linea: EOL
    4      | decvar
    5      | decvector
    6      | initvector
    7      | vector_access EOL
    8      | vector_assign
    9      | intoperation EOL
   10      | floatoperation EOL
   11      | stringops EOL
   12      | initvar
   13      | asigvar
   14      | condition
   15      | condiComp
   16      | loop
   17      | decfun
   18      | callfunc
   19      | sentence
   20      | operationError
   21      | vectorError
   22      | condiCompError
   23      | loopError
   24      | decfunError

   25 sentences: sentence
   26          | condiComp
   27          | sentences sentence

   28 sentence: intoperation EOL
   29         | floatoperation EOL
   30         | stringops EOL
   31         | decvar EOL
   32         | decvector EOL
   33         | initvector EOL
   34         | vector_access EOL
   35         | vector_assign EOL
   36         | asigvar
   37         | initvar
   38         | loop
   39         | callfunc EOL

   40 sentencesError: decfun

   41 decvar: VAR IVR

   42 decvector: VEC IVR COR_A INT COR_C

   43 initvector: VEC IVR COR_A INT COR_C ASS LLA vector_elements LLC EOL
   44           | VEC IVR ASS LLA vector_elements LLC EOL

   45 vector_elements: value
   46                | vector_elements COMA value

   47 vector_access: IVR COR_A INT COR_C
   48              | IVR COR_A IVR COR_C

   49 vector_assign: IVR COR_A INT COR_C ASS value EOL
   50              | IVR COR_A INT COR_C ASS intoperation EOL
   51              | IVR COR_A INT COR_C ASS floatoperation EOL
   52              | IVR COR_A INT COR_C ASS stringops EOL
   53              | IVR COR_A IVR COR_C ASS value EOL
   54              | IVR COR_A IVR COR_C ASS intoperation EOL
   55              | IVR COR_A IVR COR_C ASS floatoperation EOL
   56              | IVR COR_A IVR COR_C ASS stringops EOL

   57 initvar: VAR IVR ASS STR EOL
   58        | VAR IVR ASS intoperation EOL
   59        | VAR IVR ASS floatoperation EOL
   60        | VAR IVR ASS stringops EOL
   61        | VAR IVR ASS value EOL
   62        | VAR IVR ASS vector_access EOL
   63        | VAR IVR ASS callfunc

   64 asigvar: IVR ASS value EOL
   65        | IVR ASS intoperation EOL
   66        | IVR ASS floatoperation EOL
   67        | IVR ASS stringops EOL
   68        | IVR ASS vector_access EOL
   69        | IVR ASS callfunc
   70        | IVR ASS STR EOL

   71 value: INT
   72      | FLO
   73      | IVR
   74      | vector_access

   75 intoperation: INT ADD INT
   76             | INT SUB INT
   77             | INT MUL INT
   78             | INT DIV INT
   79             | FLO ADD INT
   80             | FLO SUB INT
   81             | FLO MUL INT
   82             | FLO DIV INT
   83             | INT ADD FLO
   84             | INT SUB FLO
   85             | INT MUL FLO
   86             | INT DIV FLO
   87             | vector_access ADD INT
   88             | vector_access SUB INT
   89             | vector_access MUL INT
   90             | vector_access DIV INT
   91             | INT ADD vector_access
   92             | INT SUB vector_access
   93             | INT MUL vector_access
   94             | INT DIV vector_access
   95             | vector_access ADD vector_access
   96             | vector_access SUB vector_access
   97             | vector_access MUL vector_access
   98             | vector_access DIV vector_access

   99 floatoperation: FLO ADD FLO
  100               | FLO SUB FLO
  101               | vector_access ADD FLO
  102               | vector_access SUB FLO
  103               | vector_access MUL FLO
  104               | vector_access DIV FLO
  105               | FLO ADD vector_access
  106               | FLO SUB vector_access
  107               | FLO MUL vector_access
  108               | FLO DIV vector_access

  109 stringops: STR ADD STR

  110 operationError: STR ADD value
  111               | STR SUB value
  112               | STR MUL value
  113               | STR DIV value
  114               | value ADD STR
  115               | value SUB STR
  116               | value MUL STR
  117               | value DIV STR

  118 vectorError: VEC IVR COR_A COR_C
  119            | IVR COR_A COR_C
  120            | VEC IVR COR_A STR COR_C

  121 conditionLoop: value SMR value
  122              | value SAE value
  123              | value GRT value
  124              | value GAE value
  125              | value EQU value
  126              | value DIS value

  127 condition: conditionLoop
  128          | NEG value
  129          | value EQU STR
  130          | STR EQU value
  131          | value DIS STR
  132          | STR DIS value

  133 conditionalSim: SII PAA condition PAC LLA sentences LLC
  134               | SII PAA condition ORR condition PAC LLA sentences LLC
  135               | SII PAA condition AND condition PAC LLA sentences LLC

  136 condiComp: conditionalSim EOL
  137          | conditionalSim SIN LLA sentences LLC EOL
  138          | conditionalSim SIN conditionalSim EOL
  139          | conditionalSim SIN conditionalSim SIN LLA sentences LLC EOL

  140 condiError: SII PAA condition PAC LLA sentencesError LLC
  141           | SII PAA condition ORR condition PAC LLA sentencesError LLC
  142           | SII PAA condition AND condition PAC LLA sentencesError LLC

  143 condiCompError: condiError EOL
  144               | conditionalSim SIN LLA sentencesError LLC EOL
  145               | conditionalSim SIN conditionalSim SIN LLA sentencesError LLC EOL

  146 loop: LOP PAA decvar EOL conditionLoop EOL IVR ADC PAC LLA sentences LLC EOL
  147     | LOP PAA decvar EOL conditionLoop EOL IVR REC PAC LLA sentences LLC EOL

  148 loopError: LOP PAA decvar EOL conditionLoop EOL IVR PAC LLA sentences LLC EOL
  149          | LOP PAA conditionLoop EOL IVR ADC PAC LLA sentences LLC EOL
  150          | LOP PAA conditionLoop EOL IVR REC PAC LLA sentences LLC EOL
  151          | LOP PAA decvar EOL IVR ADC PAC LLA sentences LLC EOL
  152          | LOP PAA decvar EOL conditionLoop EOL IVR ADC PAC LLA sentencesError LLC EOL
  153          | LOP PAA decvar EOL conditionLoop EOL IVR ADC REC LLA sentencesError LLC EOL

  154 parameters: ε
  155           | decvar
  156           | decvar COMA parameters

  157 arguments: ε
  158          | IVR
  159          | IVR COMA arguments

  160 decfunError: FUN IFU PAA parameters PAC LLA sentences LLC EOL

  161 decfun: FUN IFU PAA parameters PAC LLA sentences ret LLC EOL

  162 ret: RET value EOL
  163    | RET intoperation EOL
  164    | RET floatoperation EOL
  165    | RET stringops EOL
  166    | RET vector_access EOL

  167 callfunc: IFU PAA arguments PAC


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    EOL (258) 3 7 9 10 11 28 29 30 31 32 33 34 35 39 43 44 49 50 51 52 53 54 55 56 57 58 59 60 61 62 64 65 66 67 68 70 136 137 138 139 143 144 145 146 147 148 149 150 151 152 153 160 161 162 163 164 165 166
    VAR (259) 41 57 58 59 60 61 62 63
    IVR (260) 41 42 43 44 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 73 118 119 120 146 147 148 149 150 151 152 153 158 159
    VEC (261) 42 43 44 118 120
    STR <str> (262) 57 70 109 110 111 112 113 114 115 116 117 120 129 130 131 132
    INT <num> (263) 42 43 47 49 50 51 52 71 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94
    FLO <num> (264) 72 79 80 81 82 83 84 85 86 99 100 101 102 103 104 105 106 107 108
    ASS <num> (265) 43 44 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    ADD <num> (266) 75 79 83 87 91 95 99 101 105 109 110 114
    SUB <num> (267) 76 80 84 88 92 96 100 102 106 111 115
    MUL <num> (268) 77 81 85 89 93 97 103 107 112 116
    DIV <num> (269) 78 82 86 90 94 98 104 108 113 117
    IFU <num> (270) 160 161 167
    FUN <num> (271) 160 161
    RET <num> (272) 162 163 164 165 166
    SMR <num> (273) 121
    SAE <num> (274) 122
    GRT <num> (275) 123
    GAE <num> (276) 124
    EQU <num> (277) 125 129 130
    NEG <num> (278) 128
    DIS <num> (279) 126 131 132
    AND <num> (280) 135 142
    ORR <num> (281) 134 141
    SII <num> (282) 133 134 135 140 141 142
    SIN <num> (283) 137 138 139 144 145
    LLA <num> (284) 43 44 133 134 135 137 139 140 141 142 144 145 146 147 148 149 150 151 152 153 160 161
    LLC <num> (285) 43 44 133 134 135 137 139 140 141 142 144 145 146 147 148 149 150 151 152 153 160 161
    PAA <num> (286) 133 134 135 140 141 142 146 147 148 149 150 151 152 153 160 161 167
    PAC <num> (287) 133 134 135 140 141 142 146 147 148 149 150 151 152 160 161 167
    COR_A <num> (288) 42 43 47 48 49 50 51 52 53 54 55 56 118 119 120
    COR_C <num> (289) 42 43 47 48 49 50 51 52 53 54 55 56 118 119 120
    LOP <num> (290) 146 147 148 149 150 151 152 153
    ADC <num> (291) 146 149 151 152 153
    REC <num> (292) 147 150 153
    COMA <num> (293) 46 156 159


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    entrada (40)
        on left: 1 2
        on right: 0 2
    linea (41)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
        on right: 2
    sentences (42)
        on left: 25 26 27
        on right: 27 133 134 135 137 139 146 147 148 149 150 151 160 161
    sentence (43)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39
        on right: 19 25 27
    sentencesError (44)
        on left: 40
        on right: 140 141 142 144 145 152 153
    decvar (45)
        on left: 41
        on right: 4 31 146 147 148 151 152 153 155 156
    decvector (46)
        on left: 42
        on right: 5 32
    initvector (47)
        on left: 43 44
        on right: 6 33
    vector_elements (48)
        on left: 45 46
        on right: 43 44 46
    vector_access <num> (49)
        on left: 47 48
        on right: 7 34 62 68 74 87 88 89 90 91 92 93 94 95 96 97 98 101 102 103 104 105 106 107 108 166
    vector_assign (50)
        on left: 49 50 51 52 53 54 55 56
        on right: 8 35
    initvar (51)
        on left: 57 58 59 60 61 62 63
        on right: 12 37
    asigvar (52)
        on left: 64 65 66 67 68 69 70
        on right: 13 36
    value (53)
        on left: 71 72 73 74
        on right: 45 46 49 53 61 64 110 111 112 113 114 115 116 117 121 122 123 124 125 126 128 129 130 131 132 162
    intoperation <num> (54)
        on left: 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98
        on right: 9 28 50 54 58 65 163
    floatoperation <num> (55)
        on left: 99 100 101 102 103 104 105 106 107 108
        on right: 10 29 51 55 59 66 164
    stringops <str> (56)
        on left: 109
        on right: 11 30 52 56 60 67 165
    operationError (57)
        on left: 110 111 112 113 114 115 116 117
        on right: 20
    vectorError (58)
        on left: 118 119 120
        on right: 21
    conditionLoop (59)
        on left: 121 122 123 124 125 126
        on right: 127 146 147 148 149 150 152 153
    condition (60)
        on left: 127 128 129 130 131 132
        on right: 14 133 134 135 140 141 142
    conditionalSim (61)
        on left: 133 134 135
        on right: 136 137 138 139 144 145
    condiComp (62)
        on left: 136 137 138 139
        on right: 15 26
    condiError (63)
        on left: 140 141 142
        on right: 143
    condiCompError (64)
        on left: 143 144 145
        on right: 22
    loop (65)
        on left: 146 147
        on right: 16 38
    loopError (66)
        on left: 148 149 150 151 152 153
        on right: 23
    parameters (67)
        on left: 154 155 156
        on right: 156 160 161
    arguments (68)
        on left: 157 158 159
        on right: 159 167
    decfunError (69)
        on left: 160
        on right: 24
    decfun (70)
        on left: 161
        on right: 17 40
    ret (71)
        on left: 162 163 164 165 166
        on right: 161
    callfunc (72)
        on left: 167
        on right: 18 39 63 69


State 0

    0 $accept: • entrada $end

    $default  reduce using rule 1 (entrada)

    entrada  go to state 1


State 1

    0 $accept: entrada • $end
    2 entrada: entrada • linea

    $end  shift, and go to state 2
    EOL   shift, and go to state 3
    VAR   shift, and go to state 4
    IVR   shift, and go to state 5
    VEC   shift, and go to state 6
    STR   shift, and go to state 7
    INT   shift, and go to state 8
    FLO   shift, and go to state 9
    IFU   shift, and go to state 10
    FUN   shift, and go to state 11
    NEG   shift, and go to state 12
    SII   shift, and go to state 13
    LOP   shift, and go to state 14

    linea           go to state 15
    sentence        go to state 16
    decvar          go to state 17
    decvector       go to state 18
    initvector      go to state 19
    vector_access   go to state 20
    vector_assign   go to state 21
    initvar         go to state 22
    asigvar         go to state 23
    value           go to state 24
    intoperation    go to state 25
    floatoperation  go to state 26
    stringops       go to state 27
    operationError  go to state 28
    vectorError     go to state 29
    conditionLoop   go to state 30
    condition       go to state 31
    conditionalSim  go to state 32
    condiComp       go to state 33
    condiError      go to state 34
    condiCompError  go to state 35
    loop            go to state 36
    loopError       go to state 37
    decfunError     go to state 38
    decfun          go to state 39
    callfunc        go to state 40


State 2

    0 $accept: entrada $end •

    $default  accept


State 3

    3 linea: EOL •

    $default  reduce using rule 3 (linea)


State 4

   41 decvar: VAR • IVR
   57 initvar: VAR • IVR ASS STR EOL
   58        | VAR • IVR ASS intoperation EOL
   59        | VAR • IVR ASS floatoperation EOL
   60        | VAR • IVR ASS stringops EOL
   61        | VAR • IVR ASS value EOL
   62        | VAR • IVR ASS vector_access EOL
   63        | VAR • IVR ASS callfunc

    IVR  shift, and go to state 41


State 5

   47 vector_access: IVR • COR_A INT COR_C
   48              | IVR • COR_A IVR COR_C
   49 vector_assign: IVR • COR_A INT COR_C ASS value EOL
   50              | IVR • COR_A INT COR_C ASS intoperation EOL
   51              | IVR • COR_A INT COR_C ASS floatoperation EOL
   52              | IVR • COR_A INT COR_C ASS stringops EOL
   53              | IVR • COR_A IVR COR_C ASS value EOL
   54              | IVR • COR_A IVR COR_C ASS intoperation EOL
   55              | IVR • COR_A IVR COR_C ASS floatoperation EOL
   56              | IVR • COR_A IVR COR_C ASS stringops EOL
   64 asigvar: IVR • ASS value EOL
   65        | IVR • ASS intoperation EOL
   66        | IVR • ASS floatoperation EOL
   67        | IVR • ASS stringops EOL
   68        | IVR • ASS vector_access EOL
   69        | IVR • ASS callfunc
   70        | IVR • ASS STR EOL
   73 value: IVR •
  119 vectorError: IVR • COR_A COR_C

    ASS    shift, and go to state 42
    COR_A  shift, and go to state 43

    $default  reduce using rule 73 (value)


State 6

   42 decvector: VEC • IVR COR_A INT COR_C
   43 initvector: VEC • IVR COR_A INT COR_C ASS LLA vector_elements LLC EOL
   44           | VEC • IVR ASS LLA vector_elements LLC EOL
  118 vectorError: VEC • IVR COR_A COR_C
  120            | VEC • IVR COR_A STR COR_C

    IVR  shift, and go to state 44


State 7

  109 stringops: STR • ADD STR
  110 operationError: STR • ADD value
  111               | STR • SUB value
  112               | STR • MUL value
  113               | STR • DIV value
  130 condition: STR • EQU value
  132          | STR • DIS value

    ADD  shift, and go to state 45
    SUB  shift, and go to state 46
    MUL  shift, and go to state 47
    DIV  shift, and go to state 48
    EQU  shift, and go to state 49
    DIS  shift, and go to state 50


State 8

   71 value: INT •
   75 intoperation: INT • ADD INT
   76             | INT • SUB INT
   77             | INT • MUL INT
   78             | INT • DIV INT
   83             | INT • ADD FLO
   84             | INT • SUB FLO
   85             | INT • MUL FLO
   86             | INT • DIV FLO
   91             | INT • ADD vector_access
   92             | INT • SUB vector_access
   93             | INT • MUL vector_access
   94             | INT • DIV vector_access

    ADD  shift, and go to state 51
    SUB  shift, and go to state 52
    MUL  shift, and go to state 53
    DIV  shift, and go to state 54

    ADD       [reduce using rule 71 (value)]
    SUB       [reduce using rule 71 (value)]
    MUL       [reduce using rule 71 (value)]
    DIV       [reduce using rule 71 (value)]
    $default  reduce using rule 71 (value)


State 9

   72 value: FLO •
   79 intoperation: FLO • ADD INT
   80             | FLO • SUB INT
   81             | FLO • MUL INT
   82             | FLO • DIV INT
   99 floatoperation: FLO • ADD FLO
  100               | FLO • SUB FLO
  105               | FLO • ADD vector_access
  106               | FLO • SUB vector_access
  107               | FLO • MUL vector_access
  108               | FLO • DIV vector_access

    ADD  shift, and go to state 55
    SUB  shift, and go to state 56
    MUL  shift, and go to state 57
    DIV  shift, and go to state 58

    ADD       [reduce using rule 72 (value)]
    SUB       [reduce using rule 72 (value)]
    MUL       [reduce using rule 72 (value)]
    DIV       [reduce using rule 72 (value)]
    $default  reduce using rule 72 (value)


State 10

  167 callfunc: IFU • PAA arguments PAC

    PAA  shift, and go to state 59


State 11

  160 decfunError: FUN • IFU PAA parameters PAC LLA sentences LLC EOL
  161 decfun: FUN • IFU PAA parameters PAC LLA sentences ret LLC EOL

    IFU  shift, and go to state 60


State 12

  128 condition: NEG • value

    IVR  shift, and go to state 61
    INT  shift, and go to state 62
    FLO  shift, and go to state 63

    vector_access  go to state 64
    value          go to state 65


State 13

  133 conditionalSim: SII • PAA condition PAC LLA sentences LLC
  134               | SII • PAA condition ORR condition PAC LLA sentences LLC
  135               | SII • PAA condition AND condition PAC LLA sentences LLC
  140 condiError: SII • PAA condition PAC LLA sentencesError LLC
  141           | SII • PAA condition ORR condition PAC LLA sentencesError LLC
  142           | SII • PAA condition AND condition PAC LLA sentencesError LLC

    PAA  shift, and go to state 66


State 14

  146 loop: LOP • PAA decvar EOL conditionLoop EOL IVR ADC PAC LLA sentences LLC EOL
  147     | LOP • PAA decvar EOL conditionLoop EOL IVR REC PAC LLA sentences LLC EOL
  148 loopError: LOP • PAA decvar EOL conditionLoop EOL IVR PAC LLA sentences LLC EOL
  149          | LOP • PAA conditionLoop EOL IVR ADC PAC LLA sentences LLC EOL
  150          | LOP • PAA conditionLoop EOL IVR REC PAC LLA sentences LLC EOL
  151          | LOP • PAA decvar EOL IVR ADC PAC LLA sentences LLC EOL
  152          | LOP • PAA decvar EOL conditionLoop EOL IVR ADC PAC LLA sentencesError LLC EOL
  153          | LOP • PAA decvar EOL conditionLoop EOL IVR ADC REC LLA sentencesError LLC EOL

    PAA  shift, and go to state 67


State 15

    2 entrada: entrada linea •

    $default  reduce using rule 2 (entrada)


State 16

   19 linea: sentence •

    $default  reduce using rule 19 (linea)


State 17

    4 linea: decvar •
   31 sentence: decvar • EOL

    EOL  shift, and go to state 68

    EOL       [reduce using rule 4 (linea)]
    $default  reduce using rule 4 (linea)


State 18

    5 linea: decvector •
   32 sentence: decvector • EOL

    EOL  shift, and go to state 69

    EOL       [reduce using rule 5 (linea)]
    $default  reduce using rule 5 (linea)


State 19

    6 linea: initvector •
   33 sentence: initvector • EOL

    EOL  shift, and go to state 70

    EOL       [reduce using rule 6 (linea)]
    $default  reduce using rule 6 (linea)


State 20

    7 linea: vector_access • EOL
   34 sentence: vector_access • EOL
   74 value: vector_access •
   87 intoperation: vector_access • ADD INT
   88             | vector_access • SUB INT
   89             | vector_access • MUL INT
   90             | vector_access • DIV INT
   95             | vector_access • ADD vector_access
   96             | vector_access • SUB vector_access
   97             | vector_access • MUL vector_access
   98             | vector_access • DIV vector_access
  101 floatoperation: vector_access • ADD FLO
  102               | vector_access • SUB FLO
  103               | vector_access • MUL FLO
  104               | vector_access • DIV FLO

    EOL  shift, and go to state 71
    ADD  shift, and go to state 72
    SUB  shift, and go to state 73
    MUL  shift, and go to state 74
    DIV  shift, and go to state 75

    ADD       [reduce using rule 74 (value)]
    SUB       [reduce using rule 74 (value)]
    MUL       [reduce using rule 74 (value)]
    DIV       [reduce using rule 74 (value)]
    $default  reduce using rule 74 (value)


State 21

    8 linea: vector_assign •
   35 sentence: vector_assign • EOL

    EOL  shift, and go to state 76

    EOL       [reduce using rule 8 (linea)]
    $default  reduce using rule 8 (linea)


State 22

   12 linea: initvar •
   37 sentence: initvar •

    $end      reduce using rule 12 (linea)
    $end      [reduce using rule 37 (sentence)]
    EOL       reduce using rule 12 (linea)
    EOL       [reduce using rule 37 (sentence)]
    VAR       reduce using rule 12 (linea)
    VAR       [reduce using rule 37 (sentence)]
    IVR       reduce using rule 12 (linea)
    IVR       [reduce using rule 37 (sentence)]
    VEC       reduce using rule 12 (linea)
    VEC       [reduce using rule 37 (sentence)]
    STR       reduce using rule 12 (linea)
    STR       [reduce using rule 37 (sentence)]
    INT       reduce using rule 12 (linea)
    INT       [reduce using rule 37 (sentence)]
    FLO       reduce using rule 12 (linea)
    FLO       [reduce using rule 37 (sentence)]
    IFU       reduce using rule 12 (linea)
    IFU       [reduce using rule 37 (sentence)]
    FUN       reduce using rule 12 (linea)
    FUN       [reduce using rule 37 (sentence)]
    NEG       reduce using rule 12 (linea)
    NEG       [reduce using rule 37 (sentence)]
    SII       reduce using rule 12 (linea)
    SII       [reduce using rule 37 (sentence)]
    LOP       reduce using rule 12 (linea)
    LOP       [reduce using rule 37 (sentence)]
    $default  reduce using rule 12 (linea)


State 23

   13 linea: asigvar •
   36 sentence: asigvar •

    $end      reduce using rule 13 (linea)
    $end      [reduce using rule 36 (sentence)]
    EOL       reduce using rule 13 (linea)
    EOL       [reduce using rule 36 (sentence)]
    VAR       reduce using rule 13 (linea)
    VAR       [reduce using rule 36 (sentence)]
    IVR       reduce using rule 13 (linea)
    IVR       [reduce using rule 36 (sentence)]
    VEC       reduce using rule 13 (linea)
    VEC       [reduce using rule 36 (sentence)]
    STR       reduce using rule 13 (linea)
    STR       [reduce using rule 36 (sentence)]
    INT       reduce using rule 13 (linea)
    INT       [reduce using rule 36 (sentence)]
    FLO       reduce using rule 13 (linea)
    FLO       [reduce using rule 36 (sentence)]
    IFU       reduce using rule 13 (linea)
    IFU       [reduce using rule 36 (sentence)]
    FUN       reduce using rule 13 (linea)
    FUN       [reduce using rule 36 (sentence)]
    NEG       reduce using rule 13 (linea)
    NEG       [reduce using rule 36 (sentence)]
    SII       reduce using rule 13 (linea)
    SII       [reduce using rule 36 (sentence)]
    LOP       reduce using rule 13 (linea)
    LOP       [reduce using rule 36 (sentence)]
    $default  reduce using rule 13 (linea)


State 24
